--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,7 +78,7 @@ tracing = { version = "0.1.40", default_features = false, features = ["log"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 winit = { path = ".", features = ["rwh_05"] }
 
-[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dev-dependencies]
+[target.'cfg(not(any(target_os = "android", target_os = "ios", target_os = "tvos")))'.dev-dependencies]
 softbuffer = { version = "0.3.0", default-features = false, features = ["x11", "x11-dlopen", "wayland", "wayland-dlopen"] }
 
 [target.'cfg(target_os = "android")'.dependencies]
@@ -86,7 +86,7 @@ android-activity = "0.5.0"
 ndk = { version = "0.8.0", default-features = false }
 ndk-sys = "0.5.0"
 
-[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
+[target.'cfg(any(target_os = "ios", target_os = "tvos", target_os = "macos"))'.dependencies]
 core-foundation = "0.9.3"
 objc2 = "0.5.0"
 
@@ -130,7 +130,7 @@ features = [
     "AppKit_NSWindowTabGroup",
 ]
 
-[target.'cfg(target_os = "ios")'.dependencies.icrate]
+[target.'cfg(any(target_os = "ios", target_os = "tvos"))'.dependencies.icrate]
 version = "0.1.0"
 features = [
     "dispatch",
@@ -174,7 +174,7 @@ features = [
     "Win32_UI_WindowsAndMessaging",
 ]
 
-[target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_os = "ios", target_os = "macos"))))'.dependencies]
+[target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_os = "ios", target_os = "tvos", target_os = "macos"))))'.dependencies]
 ahash = { version = "0.8.7", features = ["no-rng"], optional = true }
 bytemuck = { version = "1.13.1", default-features = false, optional = true }
 calloop = "0.12.3"
