--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,7 +76,7 @@ image = { version = "0.24.0", default-features = false, features = ["png"] }
 simple_logger = { version = "4.2.0", default_features = false }
 winit = { path = ".", features = ["rwh_05"] }
 
-[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dev-dependencies]
+[target.'cfg(not(any(target_os = "android", target_os = "ios", target_os = "tvos")))'.dev-dependencies]
 softbuffer = "0.3.0"
 
 [target.'cfg(target_os = "android")'.dependencies]
@@ -84,7 +84,7 @@ android-activity = "0.5.0"
 ndk = { version = "0.8.0", default-features = false }
 ndk-sys = "0.5.0"
 
-[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
+[target.'cfg(any(target_os = "ios", target_os = "tvos", target_os = "macos"))'.dependencies]
 core-foundation = "0.9.3"
 objc2 = "0.4.1"
 
@@ -107,7 +107,7 @@ features = [
     "Foundation_NSNumber",
 ]
 
-[target.'cfg(target_os = "ios")'.dependencies.icrate]
+[target.'cfg(any(target_os = "ios", target_os = "tvos"))'.dependencies.icrate]
 version = "0.0.4"
 features = [
     "dispatch",
@@ -151,7 +151,7 @@ features = [
     "Win32_UI_WindowsAndMessaging",
 ]
 
-[target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_os = "ios", target_os = "macos"))))'.dependencies]
+[target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_os = "ios", target_os = "tvos", target_os = "macos"))))'.dependencies]
 ahash = { version = "0.8.3", features = ["no-rng"], optional = true }
 bytemuck = { version = "1.13.1", default-features = false, optional = true }
 calloop = "0.12.3"
